--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
-title: Streamdata Gallery Course
-url: course.streamdata.gallery
-tag: Course
+title: Streamdata Gallery Courses
+url: courses.streamdata.gallery
+tag: Courses
 markdown: kramdown
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md", ".DS_Store"]
 github_user: streamdata-gallery
-github_repo: course
+github_repo: courses
 github_branch: master
 collections:
   listings:
