--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
-title: Streamdata Gallery Courses
+title: Streamdata API Gallery - Courses
+description: A gallery of APIs to demonstrate what is possible when it comes to making data, content, and algorithms more real time, and event-driven as part of the API economy.
 url: courses.streamdata.gallery
 tag: Courses
 markdown: kramdown
